修改启动参数